--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -34,4 +34,8 @@ storeCheckPoint=/Users/enmonster/IdeaProjects/rocketmq-all/forstore/checkpoint
 # abort文件存储位置
 abortFile=/Users/enmonster/IdeaProjects/rocketmq-all/forstore/abort
 
-namesrvAddr=127.0.0.1:9876
+namesrvAddr=10.208.201.86:9876
+
+#这里的ip地址修改成自己服务器的ip地址
+brokerIP1=10.208.201.86
+autoCreateTopicEnable=true
